Closed Bug 315886 Opened 19 years ago Closed 19 years ago

"Clear Visited Pages" in Prefs need to use the "Clear History..." (Go menu) warning

Categories

(Camino Graveyard :: Preferences, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
Camino1.0

People

(Reporter: alqahira, Assigned: bugzilla-graveyard)

References

Details

(Keywords: fixed1.8)

Attachments

(1 file)

Oops, I need to watch the flying fingers.... When Simon added the "Clear History..." item to the Go menu, he added a warning dialogue. The "Clear Visited Pages" button in the History prefPane needs to use that warning, too (currently it does not warn you at all). The button also needs to be renamed "Clear Visited Pages…" (or "Clear History…", pending the outcome of bug 295774).
Summary: "Clear Visited Pages" → "Clear Visited Pages" in Prefs need to use the "Clear History..." (Go menu) warning
The warning probably also should to have "You cannot undo this action" (or "This action cannot be undone", whichever we decide to standardize on) like our other warnings.
Taking. FWIW, the "Clear Cache" button has the same problem. I've got a semi-patch already that should fix both. I need to make sure the l10n issues are taken care of, though. I can probably post something by this evening. We should make a final decision on bug 295774 in conjunction with this, too.
Assignee: mikepinkerton → bugzilla
Doesn't (yet) comply with Smokey's comment 2, mostly because I'm waiting to hear how we want to word it. When we decide, I'll upload a new version with the "no-undo" wording included. cl
I'm going to roll all the localizable.strings changes into bug 314557 so we only have to land and keep track of one instead of three :-) Finder/trash uses "You cannot undo this action." so that's what I'm going to change all the variant/missing strings to.
I'd also like to see the user informed of the consequences of their action in each dialog too, like "Emptying the cache will cause pages to load more slowly. This action cannot be undone."
Those messages already existed for the menu items' dialogues; I was just fixing the missing/inconsistent "undone" parts. Do you want the texts beefed up further? Current strings: "EmptyCacheMessage" = "Camino saves the contents of web pages you visit in a cache so that it's faster to visit them again. You cannot undo this action."; "ClearHistoryMessage" = "Clearing your history will erase the list of sites that you have visited. You won’t be able to autocomplete the URLs of these sites when typing in the location bar. You cannot undo this action.";
(In reply to comment #7) > cache so that it's faster to visit them again. You cannot undo this action."; I've fixed that straight single quote and a couple of others in the file, too....
Comment on attachment 202569 [details] [diff] [review] Fixes our lack of a warning dialog (In reply to comment #5) > I'm going to roll all the localizable.strings changes into bug 314557 so we > only have to land and keep track of one instead of three :-) Sounds good to me. I'll set the review flag on the patch, then. cl
Attachment #202569 - Flags: review?(sfraser_bugs)
(In reply to comment #6) > I'd also like to see the user informed of the consequences of their action in > each dialog too, like "Emptying the cache will cause pages to load more slowly. > This action cannot be undone." Again, "may" rather than "will", please. A lot of users (including me) find it's faster to disable the cache entirely if they're on broadband. cl
(In reply to comment #10) > Again, "may" rather than "will", please. A lot of users (including me) find > it's faster to disable the cache entirely if they're on broadband. Really?
(In reply to comment #11) > (In reply to comment #10) > > Again, "may" rather than "will", please. A lot of users (including me) find > > it's faster to disable the cache entirely if they're on broadband. > > Really? Yeah, but per your comment 7, unless Simon thinks we need to beef up those strings a bit, they're fine as-is right now. cl
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8
Resolution: --- → FIXED
Comment on attachment 202569 [details] [diff] [review] Fixes our lack of a warning dialog clearing review request on fixed bug; apologies for bugspam
Attachment #202569 - Flags: review?(sfraser_bugs)
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: