Fix bug 315886 and bug 295774: add warning sheets when clearing the cache and history in the prefs, and standardize the terminology. Patches based on changes by Smokey Ardisson and Chris Lawson.